[package]
name = "helios-verifiable-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./bin/server.rs"

[dependencies]
tokio.workspace = true
eyre.workspace = true
tracing.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
alloy.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
reqwest.workspace = true
url.workspace = true
futures.workspace = true
async-trait.workspace = true

# server
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["query"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
alloy-trie = "0.7.8"

# crate
helios-core = { path = "../core" }
helios-ethereum = { path = "../ethereum" }
helios-opstack = { path = "../opstack" }
