[package]
name = "helios-consensus-core"
version.workspace = true
edition = "2021"

[dependencies]
alloy = { workspace = true, features = [
    "consensus",
    "rpc-types",
    "ssz",
    "rlp",
    "k256",
    "eips",
] }
alloy-rlp.workspace = true
bls12_381.workspace = true
ssz_types.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
tree_hash_derive.workspace = true
tree_hash.workspace = true
typenum.workspace = true
sha2.workspace = true
eyre.workspace = true
serde.workspace = true
superstruct.workspace = true
thiserror.workspace = true
tracing.workspace = true
zduny-wasm-timer.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
wasmtimer.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
snap.workspace = true
serde_yaml.workspace = true
