[package]
name = "helios-consensus-core"
version.workspace = true
edition = "2021"

[dependencies]
# Don't inherit workspace version to not inherit all of the features defined in the workspace
alloy = { version = "1.0.3", default-features = false, features = [
    "consensus",
    "rpc-types",
    "ssz",
    "rlp",
    "k256",
    "eips",
] }
alloy-rlp = "0.3.12"
bls12_381.workspace = true
ssz_types.workspace = true
ethereum_ssz_derive.workspace = true
ethereum_ssz.workspace = true
tree_hash_derive.workspace = true
tree_hash.workspace = true
typenum.workspace = true
sha2.workspace = true
eyre.workspace = true
serde.workspace = true
superstruct.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasmtimer.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
snap = "1"
serde_yaml = "0.9.34"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
