[package]
name = "helios-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true

# self crates
helios-common.workspace = true
helios-core.workspace = true
helios-ethereum.workspace = true
helios-verifiable-api-types.workspace = true
