[package]
name = "helios-test-utils"
version.workspace = true
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["trie"] }
serde.workspace = true
serde_json.workspace = true

# self crates
helios-common = { path = "../../common" }
helios-core = { path = "../../core" }
helios-ethereum = { path = "../../ethereum" }
helios-verifiable-api-types = { path = "../../verifiable-api/types" }
