[package]
name = "helios-verifiable-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
reqwest-retry.workspace = true
reqwest-middleware.workspace = true
async-trait.workspace = true
tokio.workspace = true

# self crates
helios-verifiable-api-types = { path = "../types" }
helios-common = { path = "../../common" }
