[package]
name = "helios-verifiable-api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./bin/server.rs"

[dependencies]
alloy.workspace = true
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url.workspace = true
futures.workspace = true
async-trait.workspace = true

# self crates
helios-verifiable-api-client = { path = "../client" }
helios-verifiable-api-types = { path = "../types" }
helios-common = { path = "../../common" }
helios-core = { path = "../../core" }
helios-ethereum = { path = "../../ethereum" }
helios-opstack = { path = "../../opstack" }

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["query"] }
clap = { version = "4.5.4", features = ["derive", "env"] }

[dev-dependencies]
helios-test-utils = { path = "../../tests/test-utils" }
