[package]
name = "helios-verifiable-api-server"
version.workspace = true
edition = "2021"

[[bin]]
name = "verifiable-api-server"
path = "./bin/server.rs"

[dependencies]
alloy = { workspace = true, features = ["trie"] }
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url.workspace = true
futures.workspace = true
async-trait.workspace = true
rayon = "1.10.0"
bytes = "1.10.1"
rand = "0.9.1"

# self crates
helios-verifiable-api-client = { path = "../client" }
helios-verifiable-api-types = { path = "../types" }
helios-common = { path = "../../common" }
helios-core = { path = "../../core" }
helios-ethereum = { path = "../../ethereum" }
helios-opstack = { path = "../../opstack" }

axum = { version = "0.8", features = ["http2"] }
axum-extra = { version = "0.10.0", features = ["query"] }
tower-http = { version = "0.6.4", features = ["compression-full", "trace"] }
clap = { version = "4.5.4", features = ["derive", "env"] }


[dev-dependencies]
helios-test-utils = { path = "../../tests/test-utils" }
